Add comprehensive shared schema markup and SEO keywords
- Add WebSite schema with SearchAction to homepage
- Enhance Person schema with address, worksFor, credentials, and keywords
- Add BreadcrumbList schema to all pages (homepage, my-story, contact, resume)
- Add WebPage/ContactPage schemas to respective pages
- Add keywords meta tags to all pages with relevant search terms
- Add keywords to Article schemas in case studies
- Improve SEO with comprehensive structured data markup

--- a/case-studies/divar-secure-call.html
+++ b/case-studies/divar-secure-call.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Case study: How I protected 2.1M users by reducing harassment by 60% on Divar, Iran's largest marketplace">
+    <meta name="keywords" content="Divar Case Study, Secure Call System, User Safety Design, Harassment Prevention, Marketplace Design, User Protection, Product Design Case Study, UX Safety Features, Trust & Safety Design, Divar Platform, Iran Marketplace, User Privacy Design, Secure Communication, Product Design Impact, UX Research Case Study">
     <link rel="canonical" href="https://masihsadri.com/case-studies/divar-secure-call.html">
     
     <!-- Open Graph / Facebook -->
@@ -625,6 +626,7 @@
       "headline": "Solving Harassment at Scale: How I Protected 2.1M Users on Iran's Largest Marketplace",
       "description": "Case study: How I protected 2.1M users by reducing harassment by 60% on Divar, Iran's largest marketplace",
       "image": "https://masihsadri.com/images/divar-secure-call-listing.png",
+      "keywords": "Divar Case Study, Secure Call System, User Safety Design, Harassment Prevention, Marketplace Design, User Protection, Product Design Case Study, UX Safety Features, Trust & Safety Design, Divar Platform, Iran Marketplace, User Privacy Design, Secure Communication, Product Design Impact, UX Research Case Study",
       "author": {
         "@type": "Person",
         "name": "Masih Sadri",
