--- a/case-studies/setare-aval-engagement.html
+++ b/case-studies/setare-aval-engagement.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Case study: Transforming user engagement from short-term attraction to long-term loyalty at Setare Aval">
+    <meta name="keywords" content="Setare Aval Case Study, User Engagement Design, User Retention, Customer Loyalty Design, Engagement Strategy, Product Design Case Study, User Onboarding, Retention Design, Engagement Metrics, User Experience Design, Product Design Impact, User Behavior Design, Engagement Features, Product Design Success">
     <link rel="canonical" href="https://masihsadri.com/case-studies/setare-aval-engagement.html">
     
     <!-- Open Graph / Facebook -->
@@ -429,6 +430,7 @@
       "headline": "Turning One-Time Visitors into Lifelong Customers: How We Increased Retention by 45%",
       "description": "Case study: Transforming user engagement from short-term attraction to long-term loyalty at Setare Aval - increasing 90-day retention by 45%",
       "image": "https://masihsadri.com/images/setare-aval-user-flow.webp",
+      "keywords": "Setare Aval Case Study, User Engagement Design, User Retention, Customer Loyalty Design, Engagement Strategy, Product Design Case Study, User Onboarding, Retention Design, Engagement Metrics, User Experience Design, Product Design Impact, User Behavior Design, Engagement Features, Product Design Success",
       "author": {
         "@type": "Person",
         "name": "Masih Sadri",
