--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Contact Masih Sadri, Product Designer Contact, UX Designer Hire, Design Collaboration, Design Mentorship, Design Opportunities, Product Design Jobs, UX Design Freelance, Design Consultation, Design Services, Hire UX Designer, Product Design Consultant">
     <meta name="description" content="Get in touch with Masih Sadri - Product Designer. Available for mentorship, collaboration, and design opportunities">
     <link rel="canonical" href="https://masihsadri.com/contact.html">
     
@@ -170,6 +171,47 @@
             <p>&copy; 2025 Masih Sadri. All rights reserved.</p>
         </div>
     </footer>
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "ContactPage",
+        "name": "Contact - Masih Sadri",
+        "description": "Get in touch with Masih Sadri - Product Designer. Available for mentorship, collaboration, and design opportunities",
+        "url": "https://masihsadri.com/contact.html",
+        "mainEntity": {
+          "@type": "Person",
+          "name": "Masih Sadri",
+          "email": "sadri.masih@gmail.com",
+          "sameAs": [
+            "https://www.linkedin.com/in/msadri/",
+            "https://www.figma.com/@masih",
+            "https://masih.framer.website/"
+          ]
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://masihsadri.com/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Contact",
+            "item": "https://masihsadri.com/contact.html"
+          }
+        ]
+      }
+    ]
+    </script>
 </body>
 </html>
 
