--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Masih Sadri - Product Designer with 6+ years of experience, enhancing experiences for 40 million active users">
+    <meta name="keywords" content="Masih Sadri, Product Designer, UX Designer, UI Designer, User Experience Design, Product Design, UX/UI, Design Portfolio, Case Studies, User Research, Design Systems, Accessibility Design, User Safety, User Engagement, Iran Designer, Tehran Designer, Senior Product Designer, Design Instructor, Rahnema College, Divar, Setare Aval, Persol, UX Certification, Sharif University, University of Tehran">
     <link rel="canonical" href="https://masihsadri.com/">
     
     <!-- Open Graph / Facebook -->
@@ -208,38 +209,113 @@
 
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Person",
-      "name": "Masih Sadri",
-      "jobTitle": "Product Designer",
-      "description": "Impact-oriented Product Designer with 6+ years of experience, enhancing experiences for 40 million active users",
-      "url": "https://masihsadri.com",
-      "image": "https://masihsadri.com/images/masih-sadri-profile.webp",
-      "sameAs": [
-        "https://www.linkedin.com/in/msadri/",
-        "https://www.figma.com/@masih",
-        "https://masih.framer.website/"
-      ],
-      "email": "sadri.masih@gmail.com",
-      "knowsAbout": [
-        "User Experience Design",
-        "Product Design",
-        "UI/UX Design",
-        "Design Systems",
-        "User Research"
-      ],
-      "alumniOf": [
-        {
-          "@type": "EducationalOrganization",
-          "name": "University of Tehran"
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Masih Sadri - Product Designer",
+        "url": "https://masihsadri.com",
+        "description": "Portfolio website of Masih Sadri - Impact-oriented Product Designer with 6+ years of experience",
+        "author": {
+          "@type": "Person",
+          "name": "Masih Sadri"
         },
-        {
-          "@type": "EducationalOrganization",
-          "name": "Sharif University of Technology"
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": {
+            "@type": "EntryPoint",
+            "urlTemplate": "https://masihsadri.com/?q={search_term_string}"
+          },
+          "query-input": "required name=search_term_string"
         }
-      ]
-    }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Masih Sadri",
+        "jobTitle": "Senior Product Designer",
+        "description": "Impact-oriented Product Designer with 6+ years of experience, enhancing experiences for 40 million active users",
+        "url": "https://masihsadri.com",
+        "image": "https://masihsadri.com/images/masih-sadri-profile.webp",
+        "sameAs": [
+          "https://www.linkedin.com/in/msadri/",
+          "https://www.figma.com/@masih",
+          "https://masih.framer.website/"
+        ],
+        "email": "sadri.masih@gmail.com",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Tehran",
+          "addressCountry": "IR",
+          "addressRegion": "Tehran Province"
+        },
+        "knowsAbout": [
+          "User Experience Design",
+          "Product Design",
+          "UI/UX Design",
+          "Design Systems",
+          "User Research",
+          "User Safety",
+          "User Engagement",
+          "Accessibility Design",
+          "User Safety Design",
+          "Trust & Safety",
+          "User Retention",
+          "Design Mentorship",
+          "Design Education"
+        ],
+        "keywords": "Masih Sadri, Product Designer, UX Designer, UI Designer, User Experience Design, Product Design, UX/UI, Design Portfolio, Case Studies, User Research, Design Systems, Accessibility Design, User Safety, User Engagement, Iran Designer, Tehran Designer, Senior Product Designer, Design Instructor, Rahnema College, Divar, Setare Aval, Persol, UX Certification, Sharif University, University of Tehran",
+        "alumniOf": [
+          {
+            "@type": "EducationalOrganization",
+            "name": "University of Tehran"
+          },
+          {
+            "@type": "EducationalOrganization",
+            "name": "Sharif University of Technology"
+          }
+        ],
+        "worksFor": [
+          {
+            "@type": "Organization",
+            "name": "Persol",
+            "description": "B2B/B2C marketplace, early-stage growth"
+          }
+        ],
+        "hasCredential": [
+          {
+            "@type": "EducationalOccupationalCredential",
+            "credentialCategory": "Certification",
+            "recognizedBy": {
+              "@type": "Organization",
+              "name": "University of Tehran"
+            },
+            "about": "UX Design"
+          },
+          {
+            "@type": "EducationalOccupationalCredential",
+            "credentialCategory": "Certification",
+            "recognizedBy": {
+              "@type": "Organization",
+              "name": "Sharif University of Technology"
+            },
+            "about": "UX Design"
+          }
+        ]
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://masihsadri.com/"
+          }
+        ]
+      }
+    ]
     </script>
 </body>
 </html>
