--- a/my-story.html
+++ b/my-story.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn about Masih Sadri - Product Designer, educator, and creator of meaningful experiences. From design philosophy to education and references">
+    <meta name="keywords" content="Masih Sadri, About Me, Product Designer Story, Design Philosophy, UX Design Education, Design Instructor, Rahnema College, Design Mentorship, Design Career, Design Journey, Product Design Background, UX Designer Biography, Design Teacher, Design Education, Design References, Design Certifications">
     <link rel="canonical" href="https://masihsadri.com/my-story.html">
     
     <!-- Open Graph / Facebook -->
@@ -384,6 +385,41 @@
             <p>&copy; 2025 Masih Sadri. All rights reserved.</p>
         </div>
     </footer>
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "My Story - Masih Sadri",
+        "description": "Learn about Masih Sadri - Product Designer, educator, and creator of meaningful experiences",
+        "url": "https://masihsadri.com/my-story.html",
+        "author": {
+          "@type": "Person",
+          "name": "Masih Sadri"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://masihsadri.com/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Story",
+            "item": "https://masihsadri.com/my-story.html"
+          }
+        ]
+      }
+    ]
+    </script>
 </body>
 </html>
 
