--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Resume of Masih Sadri - Senior Product Designer with 6+ years of experience">
+    <meta name="keywords" content="Masih Sadri Resume, Product Designer Resume, UX Designer CV, Senior Product Designer, Design Resume, Product Design Experience, UX Design Skills, Design Portfolio Resume, Product Designer Jobs, UX Designer CV Download, Design Career, Product Design Resume PDF">
     <link rel="canonical" href="https://masihsadri.com/resume.html">
     
     <!-- Open Graph / Facebook -->
@@ -275,6 +276,37 @@
     <!-- PDF Generation Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script src="js/resume-pdf.js"></script>
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "Resume - Masih Sadri",
+        "description": "Resume of Masih Sadri - Senior Product Designer with 6+ years of experience",
+        "url": "https://masihsadri.com/resume.html"
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://masihsadri.com/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Resume",
+            "item": "https://masihsadri.com/resume.html"
+          }
+        ]
+      }
+    ]
+    </script>
 </body>
 </html>
 
