--- a/case-studies/setare-aval-engagement.html
+++ b/case-studies/setare-aval-engagement.html
@@ -28,6 +28,10 @@
     <meta name="twitter:image:alt" content="Setare Aval Engagement Case Study">
     
     <title>Setare Aval Case Study - Boosting User Engagement</title>
+    <link rel="icon" type="image/svg+xml" href="../images/favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../images/apple-touch-icon.png">
     <link rel="stylesheet" href="../css/case-study.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
