Update my-story page to match Framer website content
- Update hero section: 'I am Masih' and 'A Creator of Meaningful Experiences'
- Update introduction text to match Framer version about mountaineering, wood carving, teaching
- Add design philosophy section with emoji section
- Remove skills section (replaced with philosophy)
- Keep photo gallery, education, references, and Let's Talk sections
- Add emoji styling for better visual presentation

--- a/my-story.html
+++ b/my-story.html
@@ -76,9 +76,9 @@
     <section class="hero-story">
         <div class="container">
             <div class="hero-story-content">
-                <h1 class="hero-story-title animate-text-reveal">An Impact-Oriented Product Designer</h1>
-                <h2 class="hero-story-subtitle animate-text-reveal" style="animation-delay: 0.2s;">Creating Value Through Design</h2>
-                <p class="hero-story-description animate-text-reveal" style="animation-delay: 0.4s;">I design experiences that not only solve problems but create value for both businesses and users. With 6+ years of experience enhancing experiences for 40 million active users, I enjoy digging deep into challenges, analyzing them thoroughly, and coming up with solutions that truly make a difference.</p>
+                <h1 class="hero-story-title animate-text-reveal">I am Masih</h1>
+                <h2 class="hero-story-subtitle animate-text-reveal" style="animation-delay: 0.2s;">A Creator of Meaningful Experiences</h2>
+                <p class="hero-story-description animate-text-reveal" style="animation-delay: 0.4s;">Outside of design, I enjoy exploring challenges and learning through experiences like mountaineering, wood carving, and teaching. These pursuits have taught me patience, resilience, and empathy, which I try to bring into my work to create meaningful and thoughtful designs.</p>
             </div>
         </div>
     </section>
@@ -86,9 +86,6 @@
     <!-- Photo Gallery -->
     <section class="section">
         <div class="container">
-            <h2 class="section-title">Beyond Design</h2>
-            <p class="section-subtitle">My friends and colleagues often see me as someone with many layers because I'm into so many things.</p>
-            
             <div class="photo-gallery">
                 <div class="photo-card">
                     <img src="images/masih-child-photo.png" alt="Masih as a child in his dad's jacket" class="photo-image" loading="lazy">
@@ -114,39 +111,25 @@
         </div>
     </section>
 
-    <!-- Skills Section -->
+    <!-- Design Philosophy -->
     <section class="section section-alt">
         <div class="container">
-            <h2 class="section-title">Skills</h2>
-            
-            <div class="skills-grid-story">
-                <div class="skill-card-story">
-                    <h3 class="skill-title-story">Outcome-Driven Problem Solving</h3>
-                    <p class="skill-description-story">I'm committed to improving metrics, not merely as an output, but as an outcome. I enjoy solving problems and creating value, and I see design as a tool to achieve that.</p>
-                </div>
-                <div class="skill-card-story">
-                    <h3 class="skill-title-story">Design Documentation</h3>
-                    <p class="skill-description-story">Design documentation forms a crucial part of my work ethos. My thought and ideation processes are deeply intertwined with documentation.</p>
-                </div>
-                <div class="skill-card-story">
-                    <h3 class="skill-title-story">UX Measurement</h3>
-                    <p class="skill-description-story">Qualitative and quantitative data analysis to measure and improve user experience continuously.</p>
-                </div>
-                <div class="skill-card-story">
-                    <h3 class="skill-title-story">End-to-End Design Ownership</h3>
-                    <p class="skill-description-story">From research to implementation, taking full ownership of the design process and outcomes.</p>
-                </div>
-                <div class="skill-card-story">
-                    <h3 class="skill-title-story">Stakeholder Management</h3>
-                    <p class="skill-description-story">Collaborating effectively with cross-functional teams to align design decisions with business goals.</p>
-                </div>
-                <div class="skill-card-story">
-                    <h3 class="skill-title-story">Design System Management</h3>
-                    <p class="skill-description-story">Creating and maintaining design systems that scale across products and teams.</p>
-                </div>
+            <p class="design-philosophy-text">I design experiences that not only solve problems but create value for both businesses and users. I enjoy digging deep into challenges, analyzing them thoroughly, and coming up with solutions that truly make a difference.</p>
+            <p class="emoji-description">If I were to describe myself using emojis, it would look like this:</p>
+            <div class="emoji-section">
+                <span class="emoji-large">☕️</span>
+                <span class="emoji-large">🪃</span>
+                <span class="emoji-large">🧗🏽</span>
+                <span class="emoji-large">🖌️</span>
+                <span class="emoji-large">📲</span>
+                <span class="emoji-large">👨🏽‍🎨</span>
+                <span class="emoji-large">💡</span>
+                <span class="emoji-large">🎨</span>
+                <span class="emoji-large">📚</span>
             </div>
         </div>
     </section>
+
 
     <!-- Education Section -->
     <section class="section">
