Redesign Education and Certificates sections with modern card layout
- Separate Education and Certificates into distinct sections
- Implement card-based grid layout for better visual hierarchy
- Add color-coded badges (Degree, Certificate, Language, BootCamp)
- Include Data Analysis BootCamp from resume
- Improve spacing, typography, and hover effects
- Use content from resume for certificates section
- Responsive design: 3 columns on desktop, 1 column on mobile
- Better organization and readability

--- a/my-story.html
+++ b/my-story.html
@@ -135,92 +135,118 @@
     <section class="section">
         <div class="container">
             <h2 class="section-title">Education</h2>
+            <p class="section-subtitle">Formal education and academic achievements</p>
             
-            <div class="education-timeline">
-                <div class="education-item">
-                    <div class="education-year">May 2022</div>
-                    <div class="education-content">
-                        <h3 class="education-title">IELTS (Academic)</h3>
-                        <p class="education-institution">International Development Program (IDP)</p>
-                        <p class="education-detail">Overall Score: 7.0</p>
+            <div class="education-grid">
+                <div class="education-card">
+                    <div class="education-card-header">
+                        <div class="education-badge">Degree</div>
+                        <div class="education-date">2015 – 2018</div>
                     </div>
+                    <h3 class="education-card-title">BSc in Project Management Engineering</h3>
+                    <p class="education-card-institution">Payame Noor University</p>
+                    <ul class="education-card-details">
+                        <li>Teaching Assistant, appointed by Dr. E. Rajabi, Head of the Science Committee</li>
+                        <li>Active Member of the Civil Engineering and Project Management Scientific Society</li>
+                    </ul>
                 </div>
 
-                <div class="education-item">
-                    <div class="education-year">July 2021</div>
-                    <div class="education-content">
-                        <h3 class="education-title">Conducting Usability Testing</h3>
-                        <p class="education-institution">The Interaction Design Foundation</p>
-                        <!-- Certificate link available upon request -->
+                <div class="education-card">
+                    <div class="education-card-header">
+                        <div class="education-badge">Associate</div>
+                        <div class="education-date">2014</div>
                     </div>
+                    <h3 class="education-card-title">Associate in Mechanical Engineering</h3>
+                    <p class="education-card-institution">Bu-Ali Sina University</p>
                 </div>
 
-                <div class="education-item">
-                    <div class="education-year">July 2019</div>
-                    <div class="education-content">
-                        <h3 class="education-title">UI/UX Design BootCamp</h3>
-                        <p class="education-institution">Rahnema College</p>
-                        <p class="education-detail">150h</p>
-                        <!-- Certificate link available upon request -->
+                <div class="education-card">
+                    <div class="education-card-header">
+                        <div class="education-badge">Diploma</div>
+                        <div class="education-date">2009</div>
                     </div>
+                    <h3 class="education-card-title">Diploma in Mathematics and Physics</h3>
+                    <p class="education-card-institution">National Organization for Development of Exceptional Talents (Sampad)</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Certificates Section -->
+    <section class="section section-alt">
+        <div class="container">
+            <h2 class="section-title">Certificates & Training</h2>
+            <p class="section-subtitle">Professional certifications and specialized training programs</p>
+            
+            <div class="certificates-grid">
+                <div class="certificate-card">
+                    <div class="certificate-card-header">
+                        <div class="certificate-badge">Certificate</div>
+                        <div class="certificate-date">July 2025</div>
+                    </div>
+                    <h3 class="certificate-card-title">Data Analysis BootCamp</h3>
+                    <p class="certificate-card-institution">Rahnema College</p>
+                    <p class="certificate-card-hours">170h</p>
+                    <p class="certificate-card-topics">Data Preprocessing, Business Metrics, BI Tools, Introductory Python, Storytelling with Data, Statistical Inference, A/B Testing</p>
                 </div>
 
-                <div class="education-item">
-                    <div class="education-year">2014</div>
-                    <div class="education-content">
-                        <h3 class="education-title">Associate in Mechanical Engineering</h3>
-                        <p class="education-institution">Bu-Ali Sina University</p>
+                <div class="certificate-card">
+                    <div class="certificate-card-header">
+                        <div class="certificate-badge language-badge">Language</div>
+                        <div class="certificate-date">May 2022</div>
                     </div>
+                    <h3 class="certificate-card-title">IELTS (Academic)</h3>
+                    <p class="certificate-card-institution">International Development Program (IDP)</p>
+                    <p class="certificate-card-score">Overall Score: 7.0</p>
                 </div>
 
-                <div class="education-item">
-                    <div class="education-year">2009</div>
-                    <div class="education-content">
-                        <h3 class="education-title">Diploma in Mathematics and Physics</h3>
-                        <p class="education-institution">National Organization for Development of Exceptional Talents (Sampad)</p>
+                <div class="certificate-card">
+                    <div class="certificate-card-header">
+                        <div class="certificate-badge">Certificate</div>
+                        <div class="certificate-date">July 2021</div>
                     </div>
+                    <h3 class="certificate-card-title">Conducting Usability Testing</h3>
+                    <p class="certificate-card-institution">The Interaction Design Foundation</p>
                 </div>
 
-                <div class="education-item">
-                    <div class="education-year">September 2021</div>
-                    <div class="education-content">
-                        <h3 class="education-title">Complete Figma Megacourse</h3>
-                        <p class="education-institution">Online Course - Udemy</p>
-                        <p class="education-detail">42h</p>
-                        <!-- Certificate link available upon request -->
+                <div class="certificate-card">
+                    <div class="certificate-card-header">
+                        <div class="certificate-badge">Certificate</div>
+                        <div class="certificate-date">September 2021</div>
                     </div>
+                    <h3 class="certificate-card-title">Complete Figma Megacourse</h3>
+                    <p class="certificate-card-institution">Online Course - Udemy</p>
+                    <p class="certificate-card-hours">42h</p>
                 </div>
 
-                <div class="education-item">
-                    <div class="education-year">May 2019</div>
-                    <div class="education-content">
-                        <h3 class="education-title">Product and Advanced UX Design</h3>
-                        <p class="education-institution">Sharif University of Technology & University of Tehran</p>
-                        <p class="education-detail">98h</p>
-                        <!-- Certificate link available upon request -->
+                <div class="certificate-card">
+                    <div class="certificate-card-header">
+                        <div class="certificate-badge bootcamp-badge">BootCamp</div>
+                        <div class="certificate-date">July 2019</div>
                     </div>
+                    <h3 class="certificate-card-title">UI/UX Design BootCamp</h3>
+                    <p class="certificate-card-institution">Rahnema College</p>
+                    <p class="certificate-card-hours">150h</p>
                 </div>
 
-                <div class="education-item">
-                    <div class="education-year">2018</div>
-                    <div class="education-content">
-                        <h3 class="education-title">BSc in Project Management Engineering</h3>
-                        <p class="education-institution">Payame Noor University</p>
-                        <ul class="education-notes">
-                            <li>Active Member of the Civil Engineering and Project Management Scientific Society.</li>
-                            <li>Teaching Assistant for: Prof. Rajabi in "Mechanics of Materials" and "Hydraulics." & Dr. Hashemnia in "Financial Management."</li>
-                        </ul>
+                <div class="certificate-card">
+                    <div class="certificate-card-header">
+                        <div class="certificate-badge">Certificate</div>
+                        <div class="certificate-date">May 2019</div>
                     </div>
+                    <h3 class="certificate-card-title">Product and Advanced UX Design</h3>
+                    <p class="certificate-card-institution">Sharif University of Technology & University of Tehran</p>
+                    <p class="certificate-card-hours">98h</p>
                 </div>
 
-                <div class="education-item">
-                    <div class="education-year">2014</div>
-                    <div class="education-content">
-                        <h3 class="education-title">Catia Certificate – Professional 3D Modeling</h3>
-                        <p class="education-institution">Iran Catia Community</p>
-                        <p class="education-detail">Grade: 100 out of 100</p>
-                        <!-- Certificate link available upon request -->
+                <div class="certificate-card">
+                    <div class="certificate-card-header">
+                        <div class="certificate-badge">Certificate</div>
+                        <div class="certificate-date">2014</div>
                     </div>
+                    <h3 class="certificate-card-title">Catia Certificate – Professional 3D Modeling</h3>
+                    <p class="certificate-card-institution">Iran Catia Community</p>
+                    <p class="certificate-card-score">Grade: 100 out of 100</p>
                 </div>
             </div>
         </div>
